Added template for the site and created function returning object->only the api data needed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,44 @@
     <title>Weather application</title>
 </head>
 <body>
-    
+
+    <div class="container ">
+        <div class="header red">
+
+        </div>
+        <div class="middle yellow">
+            <div class="gif blue">
+
+            </div>
+            <div class="temp red">
+
+            </div>
+            <div class="description green">
+            </div>
+
+        </div>
+        <div class="bottom purple">
+            <div class="tomorrow">
+
+            </div>
+            <div class="day2">
+
+            </div>
+            <div class="day3">
+
+            </div>
+            <div class="day4">
+
+            </div>
+        </div>
+    </div>
+
+    <div class="button green">
+
+    </div>
+    <div class="footer black">
+        
+    </div>
 
 
 
