--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>Weather application</title>
 </head>
 <body>
-
+    <div class="search-box">
+        <input type="text" placeholder="Enter a city">
+    </div>
     <div class="container ">
-        <div class="header red">
-
+        <div class="header">
+            <p class="header-text"></p>
         </div>
         <div class="middle yellow">
             <div class="gif blue">
@@ -54,6 +56,6 @@
 
 
 
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
