Typewriter effect and only the needed info from the API fetched and returned as an object

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="container ">
         <div class="header">
-            <p class="header-text"></p>
+            <p>Right now in <span class='typewriter-cursor typewriter-cursor1'>|</span><span class=cityname></span> , it's <span class='typewriter-cursor typewriter-cursor2'>|</span><span class='condition'></span>.</p>
         </div>
         <div class="middle yellow">
             <div class="gif blue">
